scipy-cephes/cephes.h

extern double Gamma(double x);
extern double lgam(double x);
extern double kn(int nn, double x);
extern double nbdtrc(int k, int n, double p);
extern double nbdtr(int k, int n, double p);
extern double nbdtri(int k, int n, double p);
extern double ndtr(double a);
extern double log_ndtr(double a);
extern double erfc(double a);
extern double erf(double x);
extern double erfinv(double y);
extern double erfcinv(double y);
extern double ndtri(double y0);
extern double pdtrc(double k, double m);
extern double pdtr(double k, double m);
extern double pdtri(int k, double y);
extern double poch(double x, double m);
extern double psi(double x);
extern double rgamma(double x);
extern double round(double x);
extern int shichi(double x, double *si, double *ci);
extern int sici(double x, double *si, double *ci);
extern double sindg(double x);
extern double sinpi(double x);
extern double cosdg(double x);
extern double cospi(double x);
extern double spence(double x);
extern double stdtr(int k, double t);
extern double stdtri(int k, double p);
extern double yv(double v, double x);
extern double tandg(double x);
extern double cotdg(double x);
extern double log1p(double x);
extern double log1pmx(double x);
extern double expm1(double x);
extern double cosm1(double x);
extern double lgam1p(double x);
extern double yn(int n, double x);
extern double zeta(double x, double q);
extern double zetac(double x);
extern double lanczos_sum_expg_scaled(double x);
extern double owens_t(double h, double a);