scipy-cephes/protos.h

extern double exp(double x);
extern double y0(double x);
/*
 * extern int levnsn ( int n, double r[], double a[], double e[], double refl[] );
 */
extern double log(double x);
extern double sin(double x);
extern double cos(double x);
extern double sqrt(double x);
extern double lanczos_sum(double x);
extern double lanczos_sum_near_1(double dx);
extern double lanczos_sum_near_2(double dx);