cephes.lisp


;; kn.c
(cffi:defcfun "kn" :double		;Modified Bessel function, third kind, integer order
  "Returns modified Bessel function of the third kind of order n of the argument"
  (nn :int)(x :double))


;;; Negative binomial

;; nbdtr.c
(cffi:defcfun "nbdtr" :double		     ;Negative binomial distribution
  "Returns the sum of the terms 0 through k of the negative binomial distribution"
  (k :int)(n :int)(p :double))
(cffi:defcfun "nbdtrc" :double		     ;Complemented negative binomial distribution
  "Returns the sum of the terms k+1 to infinity of the negative binomial distribution"
  (k :int)(n :int)(p :double))
(cffi:defcfun "nbdtri" :double		     ;Complemented negative binomial distribution
  "Returns the sum of the terms k+1 to infinity of the negative binomial distribution"
    (k :int)(n :int)(p :double))


;;; Normal

;; ndtr.c
(cffi:defcfun "ndtr" :double		;Normal distribution function
  "Returns the area under the Gaussian probability density function, integrated from minus infinity to x"
  (a :double))
(cffi:defcfun ("log_ndtr" log-ndtr) :double (a :double)) ;Log of the normal distribution function
(cffi:defcfun "erf"  :double (x :double)) ;Error function
(cffi:defcfun "erfc" :double (a :double)) ;Complementary error function

;; erfinv.c
(cffi:defcfun "erfinv" :double
  "Inverse of the error function.
 Computes the inverse of the error function on the restricted domain
 -1 < y < 1. This restriction ensures the existence of a unique result
 such that erf(erfinv(y)) = y."
  (y :double))
(cffi:defcfun "erfcinv" :double		;Inverse of the complementary error function
  "Computes the inverse of the complimentary error function on the restricted domain 0 < y < 2.
This restriction ensures the existence of a unique result such that erfc(erfcinv(y)) = y."
  (y :double))

;; ndtri.c
(cffi:defcfun "ndtri" :double		;Inverse of Normal distribution function
  "Returns the argument, x, for which the area under the Gaussian probability density function (integrated from minus infinity to x) is equal to y.
For small arguments 0 < y < exp(-2), the program computes z = sqrt( -2.0 * log(y) ); then the approximation is x = z - log(z)/z  - (1/z) P(1/z) / Q(1/z)."
  (y0 :double))


;;; Poisson distribution

;; pdtr.c
(cffi:defcfun "pdtr" :double		;Poisson distribution
  "Returns the sum of the first k terms of the Poisson distribution"
  (k :double)(m :double))
(cffi:defcfun "pdtrc" :double		;Complemented poisson distribution
  "Returns the sum of the terms k+1 to infinity of the Poisson distribution"
    (k :double)(m :double))
(cffi:defcfun "pdtri" :double		;Inverse Poisson distribution
  "Finds the Poisson variable x such that the integral from 0 to x of the Poisson density is equal to the given probability y"
  (k :int)(y :double))



;; poch.c
(cffi:defcfun "poch" :double		;Pochhammer symbol (a)_m = gamma(a + m) / gamma(a)
  (x :double)(m :double))

;; psi.c
(cffi:defcfun "psi" :double		;Psi (digamma) function
  "Returns the logarithmic derivative of the gamma function"
  (x :double))

;; rgamma.c
(cffi:defcfun "rgamma" :double		;Reciprocal Gamma function
  "Returns one divided by the Gamma function of the argument"
  (x :double))

;; round.c
;; This interferes with CL:ROUND
;; (cffi:defcfun "round" :double		;Round double to nearest or even integer valued double
;;   "Returns the nearest integer to x as a double precision floating point result.  If x ends in 0.5 exactly, the nearest even integer is chosen"
;;   (x :double))

;; shichi.c
(cffi:defcfun ("shichi" cephes-shichi) :double			    ;Hyperbolic sine and cosine integrals
  (x :double)(si (:pointer :double))(ci (:pointer :double)))
(defun shichi (x)
  "Returns VALUES (si ci)"
  (cffi:with-foreign-objects ((si :double)(ci :double))
    (cephes-shichi x si ci)
    (values (cffi:mem-ref si :double)
	    (cffi:mem-ref ci :double))))

;; sici.c
(cffi:defcfun ("sici" cephes-sici) :double ;Sine and cosine integrals
  (x :double)(si (:pointer :double))(ci (:pointer :double)))
(defun sici (x)
  "Returns VALUES (si ci)"
  (cffi:with-foreign-objects ((si :double)(ci :double))
    (cephes-sici x si ci)
    (values (cffi:mem-ref si :double)
	    (cffi:mem-ref ci :double))))

;; sindg.c
(cffi:defcfun "sindg" :double			   ;Circular sine of angle in degrees
  "Range reduction is into intervals of 45 degrees."
  (d :double)(m :double)(s :double))
(cffi:defcfun "cosdg" :double			   ;Circular cosine of angle in degrees
  "Range reduction is into intervals of 45 degrees."
  (d :double)(m :double)(s :double))


;; sinpi.c
;; Since the periods of these functions are integral (and thus
;; representable in double precision), it's possible to compute them
;; with greater accuracy than sin(x) and cos(x)
(cffi:defcfun "sinpi" :double		;Compute sin(pi * x)
  (x :double))
(cffi:defcfun "cospi" :double		;Compute cos(pi * x)
  (x :double))


;; spence.c
(cffi:defcfun "spence" :double		;Dilogarithm
  (x :double))


;;; Student's T distribution

;; stdtr.c
(cffi:defcfun "stdtr" :double		;Student's t distribution
  "Computes the integral from minus infinity to t of the Student t distribution with integer k > 0 degrees of freedom"
  (k :int)(t1 :double))
(cffi:defcfun "stdtri" :double		;Functional inverse of Student's t distribution
  "Given probability p, finds the argument t such that stdtr(k,t) is equal to p"
  (k :int)(p :double))


;; yv.c
(cffi:defcfun "yv" :double		;Bessel function of noninteger order
  (v :double)(x :double))


;; tandg.c
(cffi:defcfun "tandg" :double
  "Returns the circular tangent of the argument x in degrees"
  (x :double))
(cffi:defcfun "cotdg" :double
  "Returns the circular cotangent of the argument x in degrees"
  (x :double))


;; unity.c
(cffi:defcfun "log1p"   :double (x :double)) ;log(1 + x)
(cffi:defcfun "log1pmx" :double (x :double)) ;log(1 + x) - x
(cffi:defcfun "expm1"   :double (x :double)) ;exp(x) - 1
(cffi:defcfun "cosm1"   :double (x :double)) ;cos(x) - 1
(cffi:defcfun "lgam1p"  :double (x :double)) ;lgam(x + 1)


;; yn.c
(cffi:defcfun "yn" :double		;Bessel function of second kind of integer order
  " Returns Bessel function of order n, where n is a (possibly negative) integer"
  (n :int)(x :double))

;; zeta.c
(cffi:defcfun "zeta" :double		;Riemann zeta function of two arguments
  (x :double)(q :double))


;; zetac.c
(cffi:defcfun "zetac" :double		;Riemann zeta function
  (x :double))


;; lanczos.c
(cffi:defcfun ("lanczos_sum" lanczos-sum) :double (x :double))
(cffi:defcfun ("lanczos_sum_expg_scaled" lanczos-sum-scaled) :double (x :double)) ;note g=6.024680040776729583740234375, not 13... as is common
(cffi:defcfun ("lanczos_sum_near_1" lanczos-sum-near-1) :double (x :double))
(cffi:defcfun ("lanczos_sum_near_2" lanczos-sum-near-2) :double (x :double))

;; owens_t.c
(cffi:defcfun ("owens_t" owens-t) :double (h :double) (a :double)) ;Owen's T-Function


;; poly.h
(cffi:defcfun "evlrat" :double
  "Evaluate a rational function"
  (x :double)(num (:pointer :double))(m :int)(denom (:pointer :double))(n :int))
